[gd_scene load_steps=4 format=3 uid="uid://bdncyfgr0o4br"]

[ext_resource type="Script" path="res://objs/interact_obj.gd" id="1_oto2y"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ll8er"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h0egg"]
radius = 33.1361

[node name="InteractObj" type="Node2D"]
script = ExtResource("1_oto2y")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ll8er")

[node name="Sensor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor"]
shape = SubResource("CircleShape2D_h0egg")

[node name="ShowInfo" type="Label" parent="."]
offset_left = -28.0
offset_top = -62.0
offset_right = 27.0
offset_bottom = -39.0
text = "Press E"

[connection signal="body_entered" from="Sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="Sensor" to="." method="_on_sensor_body_exited"]
[connection signal="body_shape_entered" from="Sensor" to="." method="_on_sensor_body_shape_entered"]
